--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 
 <body>
     <section class="pedra">
+       
+        <div class="conteriner_bg">
+
+                <img src="img/bg.svg" class="bg_img" alt="">
+
+                <img src="img/img_esquerda.svg" class="esquerda" alt="">
+
+                <img src="img/img_direita.svg" class="direita" alt="">
+
+        </div>
 
         <header class="papel">
             <a href="">
@@ -52,13 +62,13 @@
 
             <nav class="tesoura">
                 <ul>
-                    <li><a href="">Download</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Discover</a></li>
-                    <li><a href="">Safety</a></li>
-                    <li><a href="">Support</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Careers</a></li>
+                    <li><a href="#">Download</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Discover</a></li>
+                    <li><a href="#">Safety</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Careers</a></li>
                 </ul>
 
             </nav>
